fix(captcha): Image size too small to be recognized.

--- a/packages/artalk/src/style/main.less
+++ b/packages/artalk/src/style/main.less
@@ -248,7 +248,7 @@ i.atk-icon {
     & > .atk-layer-dialog-content {
       .atk-captcha-img {
         cursor: pointer;
-        width: 100px;
+        width: 170px;
         height: auto;
         margin-right: 10px;
         padding-right: 10px;
